Fixes header alignment gap
Removes header sizing variables
Adds cursor: pointer to items in header
Fixes alignment of icons in header

--- a/src/header/css/header-apps.pcss
+++ b/src/header/css/header-apps.pcss
@@ -41,16 +41,11 @@
 
 .esri-header-apps-control {
 	display: block;
-
+	cursor: pointer;
 	@apply --normalize-button;
 	@apply --unset-button;
 	@apply --menu-link-styles;
-	margin-top: 2px;
-	padding: 45px 12px 10px 10px;
-
-	@media (--width-s) {
-		margin-top: -2px;
-	}
+	padding: 45px 12px 12px 10px;
 }
 
 .esri-header-apps .empty-padding {
