--- a/src/shared/css/shared.pcss
+++ b/src/shared/css/shared.pcss
@@ -17,8 +17,7 @@
 	/* ====================================================================== */
 
 	--header-width-m: 320px;
-	--header-height-s: 50px;
-	--header-height-l: 56px;
+	--header-height: 56px;
 	--footer-social-size: 36px;
 	--footer-social-gutter: 7px;
 
